--- a/boxofficemojo-scraper/package.json
+++ b/boxofficemojo-scraper/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "csv": "^6.4.1",
     "csv-writer": "^1.6.0",
     "node-html-parser": "^7.0.1"
   }
